# dailyCalendar.yaml

AppId: com.barnabas243.CalenTrack
---
- launchApp

- tapOn: 'calendar.*'
- tapOn: 'mode-daily'

- assertVisible: 'mode-daily'

- tapOn: 'mode-daily'
- takeScreenshot: dailyCalendar
